# whisper_assistant

./: .env.example  .gitignore  .gitmodules  BRANDING.md  HANDOFF.md  Justfile  LICENSE  README.md  TODO.md  architecture-review.md  architecture-v2.md  architecture.md  langchain-docs.ipynb  lock_requirements.sh  main.py  pyproject.toml  requirements.txt  rewrite-analysis.md  run_whisper.sh  setup.py  todo.txt  whisperGPT.py
.cursor/rules/: after-changes.mdc
.github/workflows/: macos-release.yml
actions/: bash.py  code_shortener.py  simple_gpt_action.py  testing.py  translate.py
actions/agents/: bash.py  executor.py  gradio.py  langchain_code_agent.py  search_agent.py  zapier.py
actions/agents/utils/: custom_repl.py
audio/: audio_processing.py  speak.py
config/: actions_config.py  config.py
daemon/: Cargo.toml
daemon/src/: cli.rs  error.rs  lib.rs  main.rs  test_support.rs
daemon/src/bootstrap/: env.rs  mod.rs  paths.rs
daemon/src/capture/: devices.rs  mic.rs  mod.rs
daemon/src/config/: load.rs  mod.rs  schema.rs
daemon/src/controller/: events.rs  mod.rs  queue.rs  state.rs
daemon/src/doctor/: checks.rs  mod.rs  report.rs
daemon/src/history/: mod.rs  models.rs  store.rs
daemon/src/output/: clipboard.rs  mod.rs
daemon/src/runtime/: app.rs  mod.rs  topology.rs
daemon/src/transcription/: engine.rs  mod.rs  request_builder.rs  scheduler.rs
daemon/src/ui/: hotkey.rs  mod.rs  notify.rs  tray.rs
daemon/tests/: franken_whisper_integration.rs  franken_whisper_release_gate.rs  release_gate_preflight.rs
macos/: Package.resolved  Package.swift
macos/Sources/Quedo/: AppController.swift  AppDelegate.swift  HistoryView.swift  MenuBarController.swift  OnboardingCoordinator.swift  PreferencesView.swift
macos/Sources/QuedoCLI/: main.swift
macos/Sources/QuedoCore/: AudioCaptureEngine.swift  ConfigurationManager.swift  CoreTypes.swift  DiagnosticsCenter.swift  (+6 more)
macos/scripts/: bootstrap-whisper-cpp.sh  package-release.sh  update-homebrew-tap.sh
misc/pyannote-diarization/: batch.sh  diarization.py  pyproject.toml
reviews/: SUMMARY.md
scripts/: setup_franken_whisper_stack.sh
src/: cli.py  config.py  env.py  log_config.py  main.py
src/quedo/: __init__.py  cli.py  env.py  log_config.py  main.py  paths.py  permissions.py
src/whisper_assistant/: __init__.py  cli.py  env.py  log_config.py  main.py  paths.py
whisper_shortcut/: .gitignore  action_configs.py  actions.py  actions_config.py  agent_template.py  agents.py  audio_processing.py  babyagi.py  bash.py  config.py  langchain_code_agent.py  main.py  prompts.py  record_and_transcribe.py  requirements.txt  search_agent.py  shortcuts.py.template  simple_gpt4_action.py  sounds.py  speak.py  t.py  temp123.py  test123.py  transcribe.py  translate.py  utils.py  whisperGPT.py  zapier.py
whisper_shortcut/actions/: BaseAction.py  java_code_splitter.py  simple_gpt4_action.py  simple_gpt_action.py  single_gpt_action.py  test.py  transcribe.py  translate.py
(+47 files in other folders)
