[project]
name = "whisper-assistant"
version = "0.1.7"
description = "Voice transcription tool using Groq API with global hotkeys"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "groq>=0.9.0",
    "numpy>=1.26.4",
    "PyAudio>=0.2.14",
    "pynput>=1.7.6",
    "pyperclip>=1.8.2",
    "python-dotenv>=1.0.1",
    "soundfile>=0.12.1",
]

[project.scripts]
whisper-assistant = "whisper_assistant.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_assistant"]
