[project]
name = "whisper-assistant"
version = "0.2.0"
description = "Voice transcription tool using Groq API with global hotkeys"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "groq>=1.0.0",
    "numpy>=2.4.2",
    "pynput>=1.8.1",
    "python-dotenv>=1.2.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]

[project.scripts]
whisper-assistant = "whisper_assistant.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/whisper_assistant"]
