[project]
name = "pyannote-diarization"
version = "0.1.0"
description = "Norwegian interview diarization using Groq Whisper + pyannote.audio"
requires-python = ">=3.10"
dependencies = [
    "groq>=0.9.0",
    "numpy>=1.26.4",
    "soundfile>=0.12.1",
    "pyannote.audio>=3.1.1",
    "torch>=2.0",
    "python-dotenv>=1.0.1",
]
